ACLOCAL_AMFLAGS=-I m4

LIBTOOL_DEPS = @LIBTOOL_DEPS@
libtool:	$(LIBTOOL_DEPS)
	$(SHELL) ./config.status --recheck

SUBDIRS = rcsslogplayer tool qt4 .

EXTRA_DIST = \
	rcsslogplayer.pro \
	icons/blank.xpm \
	icons/ff.xpm\
	icons/go.xpm \
	icons/minus.xpm \
	icons/next_score.xpm \
	icons/open.xpm \
	icons/play.xpm \
	icons/plus.xpm \
	icons/prev_score.xpm \
	icons/quit.xpm \
	icons/rcss.icns \
	icons/rcss.ico \
	icons/rcss.xpm \
	icons/rec.xpm \
	icons/rev.xpm \
	icons/rew.xpm \
	icons/stop.xpm


CLEANFILES = *~
