## Process this file with automake to produce Makefile.in

bin_PROGRAMS = rcsslogplayer

# bin_SCRIPTS = rcsslogplay

rcsslogplayer_SOURCES = \
	angle_deg.cpp \
	ball_painter.cpp \
	circle_2d.cpp \
	config_dialog.cpp \
	detail_dialog.cpp \
	disp_holder.cpp \
	draw_info_painter.cpp \
	field_canvas.cpp \
	field_painter.cpp \
	image_save_dialog.cpp \
	line_2d.cpp \
	log_player.cpp \
	log_player_tool_bar.cpp \
	log_slider_tool_bar.cpp \
	main.cpp \
	main_data.cpp \
	main_window.cpp \
	monitor_client.cpp \
	monitor_server.cpp \
	options.cpp \
	player_painter.cpp \
	player_type_dialog.cpp \
	remote_monitor.cpp \
	score_board_painter.cpp \
	team_graphic.cpp \
	team_graphic_painter.cpp \
	vector_2d.cpp

nodist_rcsslogplayer_SOURCES = \
	moc_config_dialog.cpp \
	moc_detail_dialog.cpp \
	moc_field_canvas.cpp \
	moc_image_save_dialog.cpp \
	moc_log_player.cpp \
	moc_log_player_tool_bar.cpp \
	moc_log_slider_tool_bar.cpp \
	moc_main_window.cpp \
	moc_monitor_client.cpp \
	moc_monitor_server.cpp \
	moc_player_type_dialog.cpp \
	moc_remote_monitor.cpp

noinst_HEADERS = \
	angle_deg.h \
	ball_painter.h \
	circle_2d.h \
	config_dialog.h \
	detail_dialog.h \
	disp_holder.h \
	draw_info_painter.h \
	field_canvas.h \
	field_painter.h \
	image_save_dialog.h \
	line_2d.h \
	log_player.h \
	log_player_tool_bar.h \
	log_slider_tool_bar.h \
	main_data.h \
	main_window.h \
	monitor_client.h \
	monitor_server.h \
	mouse_state.h \
	options.h \
	painter_interface.h \
	player_painter.h \
	player_type_dialog.h \
	remote_monitor.h \
	score_board_painter.h \
	team_graphic.h \
	team_graphic_painter.h \
	vector_2d.h

rcsslogplayer_CPPFLAGS = -I$(top_srcdir) $(QT4_CPPFLAGS)
rcsslogplayer_CXXFLAGS = -W -Wall $(QT4_CXXFLAGS)
rcsslogplayer_LDFLAGS = -L$(top_builddir)/rcsslogplayer $(QT4_LDFLAGS)
rcsslogplayer_LDADD = -lrcssrcgparser $(BOOST_PROGRAM_OPTIONS_LIB) $(QT4_LDADD)

# source files from headers generated by Meta Object Compiler
moc_%.cpp: %.h
	$(QT4_MOC) $< -o $@

# rule to generate tranlation files
##%.qm: %.ts
##	$(QT4_LRELEASE) $< -qm $@

AM_CPPFLAGS =
AM_CFLAGS = -W -Wall
AM_CXXFLAGS = -W -Wall
AM_LDFLAGS =

EXTRA_DIST = \
	rcsslogplay \
	rcsslogplayer.rc \
	qt4.pro

CLEANFILES = $(nodist_rcsslogplayer_SOURCES) *~
